Bug#119442 ORDER BY optimization doesn't recognize IS NULL as constant

PROBLEM:

1. The optimizer's check_field_is_const() function only recognized
   equality operators (col = value) as constants for ORDER BY
   simplification.
2. It failed to recognize that "col IS NULL" also guarantees a
   single value (NULL) for sorting purposes.
3. This caused unnecessary filesort operations even when covering
   indexes existed.
4. Example: WHERE a = 1 AND b IS NULL ORDER BY a, b, c would use
   filesort despite having index (a, b, c).

FIX:

1. Extended check_field_is_const() to handle Item_func::ISNULL_FUNC.
2. Added is_isnull_func() helper function to identify IS NULL
   conditions.
3. Properly handles OR conditions - "IS NULL OR value" remains
   non-constant, while "IS NULL OR IS NULL" is constant.
4. Stores IS NULL function as sentinel in const_item to ensure
   consistency across OR branches.
5. Preserves correct NULL ordering semantics (NULLs first in ASC,
   last in DESC).