sql/sql_select.cc
@@ -3945,6 +3945,16 @@ static bool equal(const Item *i1, const Item *i2, const Field *f2) {
     return false;
 }
 
+/*
+  Return true if the item represents an IS NULL function.
+*/
+
+static inline bool is_isnull_func(const Item *item) {
+  return item != nullptr && item->type() == Item::FUNC_ITEM &&
+         down_cast<const Item_func *>(item)->functype() ==
+             Item_func::ISNULL_FUNC;
+}
+
 /**
   Check if a field is equal to a constant value in a condition
 
@@ -3978,22 +3988,46 @@ bool check_field_is_const(Item *cond, const Item *order_item,
   }
   if (cond->type() != Item::FUNC_ITEM) return false;
   Item_func *const func = down_cast<Item_func *>(cond);
-  if (func->functype() != Item_func::EQUAL_FUNC &&
-      func->functype() != Item_func::EQ_FUNC)
-    return false;
-  Item_func_comparison *comp = down_cast<Item_func_comparison *>(func);
-  Item *left = comp->arguments()[0];
-  Item *right = comp->arguments()[1];
-  if (equal(left, order_item, order_field)) {
-    if (equality_determines_uniqueness(comp, left, right)) {
-      if (*const_item != nullptr) return right->eq(*const_item);
-      *const_item = right;
+  if (func->functype() == Item_func::EQUAL_FUNC ||
+      func->functype() == Item_func::EQ_FUNC) {
+    Item_func_comparison *comp = down_cast<Item_func_comparison *>(func);
+    Item *left = comp->arguments()[0];
+    Item *right = comp->arguments()[1];
+    Item *candidate_const = nullptr;
+
+    if (equal(left, order_item, order_field)) {
+      if (equality_determines_uniqueness(comp, left, right))
+        candidate_const = right;
+    } else if (equal(right, order_item, order_field)) {
+      if (equality_determines_uniqueness(comp, right, left))
+        candidate_const = left;
+    }
+
+    if (candidate_const) {
+      if (*const_item != nullptr) {
+        // val = 5 OR val IS NULL is not a constant
+        if (is_isnull_func(*const_item)) return false;
+        return candidate_const->eq(*const_item);
+      }
+      *const_item = candidate_const;
       return true;
     }
-  } else if (equal(right, order_item, order_field)) {
-    if (equality_determines_uniqueness(comp, right, left)) {
-      if (*const_item != nullptr) return left->eq(*const_item);
-      *const_item = left;
+  } else if (func->functype() == Item_func::ISNULL_FUNC) {
+    /*
+      Handle "field IS NULL" conditions. Since all NULL values are treated
+      uniformly in ORDER BY (NULLs appear first in ASC, last in DESC),
+      a field constrained to IS NULL is effectively constant for ordering.
+
+      We store the IS NULL function itself as a sentinel in const_item to
+      ensure consistency across OR branches. IS NULL is only compatible with
+      other IS NULL conditions, not with equality conditions.
+    */
+    if (equal(func->arguments()[0], order_item, order_field)) {
+      if (*const_item != nullptr) {
+        if (is_isnull_func(*const_item)) return true;  // val IS NULL OR val IS NULL is constant
+        return false;
+      }
+      *const_item = func;
       return true;
     }
   }
